Seperate-codes/array-doloop-ifelse/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     statement -> declaration
Rule 4     statement -> assignment
Rule 5     statement -> if_statement
Rule 6     statement -> do_loop
Rule 7     statement -> io_statement
Rule 8     statement -> CONTINUE
Rule 9     statement -> EXIT
Rule 10    declaration -> type DCOLON IDENTIFIER
Rule 11    declaration -> type DCOLON IDENTIFIER LPAREN array_dims RPAREN
Rule 12    declaration -> DIMENSION DCOLON IDENTIFIER LPAREN array_dims RPAREN
Rule 13    type -> INTEGER
Rule 14    type -> REAL
Rule 15    type -> CHARACTER
Rule 16    type -> LOGICAL
Rule 17    array_dims -> NUMBER
Rule 18    array_dims -> IDENTIFIER
Rule 19    array_dims -> array_dims COMMA NUMBER
Rule 20    array_dims -> array_dims COMMA IDENTIFIER
Rule 21    assignment -> target EQUALS expression
Rule 22    target -> IDENTIFIER
Rule 23    target -> array_ref
Rule 24    array_ref -> IDENTIFIER LPAREN expression RPAREN
Rule 25    array_ref -> IDENTIFIER LPAREN expression_list RPAREN
Rule 26    if_statement -> IF LPAREN condition RPAREN THEN statement_list ENDIF
Rule 27    if_statement -> IF LPAREN condition RPAREN THEN statement_list ELSE statement_list ENDIF
Rule 28    do_loop -> DO IDENTIFIER EQUALS expression COMMA expression statement_list ENDDO
Rule 29    statement_list -> statement
Rule 30    statement_list -> statement_list statement
Rule 31    io_statement -> PRINT TIMES COMMA print_list
Rule 32    io_statement -> READ TIMES COMMA read_list
Rule 33    print_list -> expression
Rule 34    print_list -> STRING
Rule 35    print_list -> print_list COMMA expression
Rule 36    print_list -> print_list COMMA STRING
Rule 37    read_list -> IDENTIFIER
Rule 38    read_list -> read_list COMMA IDENTIFIER
Rule 39    expression -> term
Rule 40    expression -> expression PLUS term
Rule 41    expression -> expression MINUS term
Rule 42    term -> factor
Rule 43    term -> term TIMES factor
Rule 44    term -> term DIVIDE factor
Rule 45    factor -> primary
Rule 46    factor -> factor POWER primary
Rule 47    primary -> NUMBER
Rule 48    primary -> IDENTIFIER
Rule 49    primary -> LPAREN expression RPAREN
Rule 50    primary -> array_ref
Rule 51    expression_list -> expression
Rule 52    expression_list -> expression_list COMMA expression
Rule 53    condition -> expression GT expression
Rule 54    condition -> expression LT expression
Rule 55    condition -> expression GE expression
Rule 56    condition -> expression LE expression
Rule 57    condition -> expression EQ expression
Rule 58    condition -> expression NE expression
Rule 59    condition -> condition AND condition
Rule 60    condition -> condition OR condition
Rule 61    condition -> NOT condition
Rule 62    condition -> LPAREN condition RPAREN
Rule 63    condition -> TRUE
Rule 64    condition -> FALSE

Terminals, with rules where they appear

AND                  : 59
CHARACTER            : 15
COMMA                : 19 20 28 31 32 35 36 38 52
CONTINUE             : 8
DCOLON               : 10 11 12
DIMENSION            : 12
DIVIDE               : 44
DO                   : 28
ELSE                 : 27
ENDDO                : 28
ENDIF                : 26 27
EQ                   : 57
EQUALS               : 21 28
EXIT                 : 9
FALSE                : 64
GE                   : 55
GT                   : 53
IDENTIFIER           : 10 11 12 18 20 22 24 25 28 37 38 48
IF                   : 26 27
INTEGER              : 13
LE                   : 56
LOGICAL              : 16
LPAREN               : 11 12 24 25 26 27 49 62
LT                   : 54
MINUS                : 41
NE                   : 58
NOT                  : 61
NUMBER               : 17 19 47
OR                   : 60
PLUS                 : 40
POWER                : 46
PRINT                : 31
READ                 : 32
REAL                 : 14
RPAREN               : 11 12 24 25 26 27 49 62
STRING               : 34 36
THEN                 : 26 27
TIMES                : 31 32 43
TRUE                 : 63
error                : 

Nonterminals, with rules where they appear

array_dims           : 11 12 19 20
array_ref            : 23 50
assignment           : 4
condition            : 26 27 59 59 60 60 61 62
declaration          : 3
do_loop              : 6
expression           : 21 24 28 28 33 35 40 41 49 51 52 53 53 54 54 55 55 56 56 57 57 58 58
expression_list      : 25 52
factor               : 42 43 44 46
if_statement         : 5
io_statement         : 7
primary              : 45 46
print_list           : 31 35 36
program              : 2 0
read_list            : 32 38
statement            : 1 2 29 30
statement_list       : 26 27 27 28 30
target               : 21
term                 : 39 40 41 43 44
type                 : 10 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (3) statement -> . declaration
    (4) statement -> . assignment
    (5) statement -> . if_statement
    (6) statement -> . do_loop
    (7) statement -> . io_statement
    (8) statement -> . CONTINUE
    (9) statement -> . EXIT
    (10) declaration -> . type DCOLON IDENTIFIER
    (11) declaration -> . type DCOLON IDENTIFIER LPAREN array_dims RPAREN
    (12) declaration -> . DIMENSION DCOLON IDENTIFIER LPAREN array_dims RPAREN
    (21) assignment -> . target EQUALS expression
    (26) if_statement -> . IF LPAREN condition RPAREN THEN statement_list ENDIF
    (27) if_statement -> . IF LPAREN condition RPAREN THEN statement_list ELSE statement_list ENDIF
    (28) do_loop -> . DO IDENTIFIER EQUALS expression COMMA expression statement_list ENDDO
    (31) io_statement -> . PRINT TIMES COMMA print_list
    (32) io_statement -> . READ TIMES COMMA read_list
    (13) type -> . INTEGER
    (14) type -> . REAL
    (15) type -> . CHARACTER
    (16) type -> . LOGICAL
    (22) target -> . IDENTIFIER
    (23) target -> . array_ref
    (24) array_ref -> . IDENTIFIER LPAREN expression RPAREN
    (25) array_ref -> . IDENTIFIER LPAREN expression_list RPAREN

    CONTINUE        shift and go to state 8
    EXIT            shift and go to state 9
    DIMENSION       shift and go to state 12
    IF              shift and go to state 14
    DO              shift and go to state 15
    PRINT           shift and go to state 16
    READ            shift and go to state 17
    INTEGER         shift and go to state 18
    REAL            shift and go to state 19
    CHARACTER       shift and go to state 20
    LOGICAL         shift and go to state 21
    IDENTIFIER      shift and go to state 11

    program                        shift and go to state 1
    statement                      shift and go to state 2
    declaration                    shift and go to state 3
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    do_loop                        shift and go to state 6
    io_statement                   shift and go to state 7
    type                           shift and go to state 10
    target                         shift and go to state 13
    array_ref                      shift and go to state 22

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (3) statement -> . declaration
    (4) statement -> . assignment
    (5) statement -> . if_statement
    (6) statement -> . do_loop
    (7) statement -> . io_statement
    (8) statement -> . CONTINUE
    (9) statement -> . EXIT
    (10) declaration -> . type DCOLON IDENTIFIER
    (11) declaration -> . type DCOLON IDENTIFIER LPAREN array_dims RPAREN
    (12) declaration -> . DIMENSION DCOLON IDENTIFIER LPAREN array_dims RPAREN
    (21) assignment -> . target EQUALS expression
    (26) if_statement -> . IF LPAREN condition RPAREN THEN statement_list ENDIF
    (27) if_statement -> . IF LPAREN condition RPAREN THEN statement_list ELSE statement_list ENDIF
    (28) do_loop -> . DO IDENTIFIER EQUALS expression COMMA expression statement_list ENDDO
    (31) io_statement -> . PRINT TIMES COMMA print_list
    (32) io_statement -> . READ TIMES COMMA read_list
    (13) type -> . INTEGER
    (14) type -> . REAL
    (15) type -> . CHARACTER
    (16) type -> . LOGICAL
    (22) target -> . IDENTIFIER
    (23) target -> . array_ref
    (24) array_ref -> . IDENTIFIER LPAREN expression RPAREN
    (25) array_ref -> . IDENTIFIER LPAREN expression_list RPAREN

    CONTINUE        shift and go to state 8
    EXIT            shift and go to state 9
    DIMENSION       shift and go to state 12
    IF              shift and go to state 14
    DO              shift and go to state 15
    PRINT           shift and go to state 16
    READ            shift and go to state 17
    INTEGER         shift and go to state 18
    REAL            shift and go to state 19
    CHARACTER       shift and go to state 20
    LOGICAL         shift and go to state 21
    IDENTIFIER      shift and go to state 11

    statement                      shift and go to state 23
    declaration                    shift and go to state 3
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    do_loop                        shift and go to state 6
    io_statement                   shift and go to state 7
    type                           shift and go to state 10
    target                         shift and go to state 13
    array_ref                      shift and go to state 22

state 2

    (1) program -> statement .

    CONTINUE        reduce using rule 1 (program -> statement .)
    EXIT            reduce using rule 1 (program -> statement .)
    DIMENSION       reduce using rule 1 (program -> statement .)
    IF              reduce using rule 1 (program -> statement .)
    DO              reduce using rule 1 (program -> statement .)
    PRINT           reduce using rule 1 (program -> statement .)
    READ            reduce using rule 1 (program -> statement .)
    INTEGER         reduce using rule 1 (program -> statement .)
    REAL            reduce using rule 1 (program -> statement .)
    CHARACTER       reduce using rule 1 (program -> statement .)
    LOGICAL         reduce using rule 1 (program -> statement .)
    IDENTIFIER      reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)


state 3

    (3) statement -> declaration .

    CONTINUE        reduce using rule 3 (statement -> declaration .)
    EXIT            reduce using rule 3 (statement -> declaration .)
    DIMENSION       reduce using rule 3 (statement -> declaration .)
    IF              reduce using rule 3 (statement -> declaration .)
    DO              reduce using rule 3 (statement -> declaration .)
    PRINT           reduce using rule 3 (statement -> declaration .)
    READ            reduce using rule 3 (statement -> declaration .)
    INTEGER         reduce using rule 3 (statement -> declaration .)
    REAL            reduce using rule 3 (statement -> declaration .)
    CHARACTER       reduce using rule 3 (statement -> declaration .)
    LOGICAL         reduce using rule 3 (statement -> declaration .)
    IDENTIFIER      reduce using rule 3 (statement -> declaration .)
    $end            reduce using rule 3 (statement -> declaration .)
    ENDIF           reduce using rule 3 (statement -> declaration .)
    ELSE            reduce using rule 3 (statement -> declaration .)
    ENDDO           reduce using rule 3 (statement -> declaration .)


state 4

    (4) statement -> assignment .

    CONTINUE        reduce using rule 4 (statement -> assignment .)
    EXIT            reduce using rule 4 (statement -> assignment .)
    DIMENSION       reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    DO              reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    READ            reduce using rule 4 (statement -> assignment .)
    INTEGER         reduce using rule 4 (statement -> assignment .)
    REAL            reduce using rule 4 (statement -> assignment .)
    CHARACTER       reduce using rule 4 (statement -> assignment .)
    LOGICAL         reduce using rule 4 (statement -> assignment .)
    IDENTIFIER      reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    ENDIF           reduce using rule 4 (statement -> assignment .)
    ELSE            reduce using rule 4 (statement -> assignment .)
    ENDDO           reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> if_statement .

    CONTINUE        reduce using rule 5 (statement -> if_statement .)
    EXIT            reduce using rule 5 (statement -> if_statement .)
    DIMENSION       reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    DO              reduce using rule 5 (statement -> if_statement .)
    PRINT           reduce using rule 5 (statement -> if_statement .)
    READ            reduce using rule 5 (statement -> if_statement .)
    INTEGER         reduce using rule 5 (statement -> if_statement .)
    REAL            reduce using rule 5 (statement -> if_statement .)
    CHARACTER       reduce using rule 5 (statement -> if_statement .)
    LOGICAL         reduce using rule 5 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    ENDIF           reduce using rule 5 (statement -> if_statement .)
    ELSE            reduce using rule 5 (statement -> if_statement .)
    ENDDO           reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> do_loop .

    CONTINUE        reduce using rule 6 (statement -> do_loop .)
    EXIT            reduce using rule 6 (statement -> do_loop .)
    DIMENSION       reduce using rule 6 (statement -> do_loop .)
    IF              reduce using rule 6 (statement -> do_loop .)
    DO              reduce using rule 6 (statement -> do_loop .)
    PRINT           reduce using rule 6 (statement -> do_loop .)
    READ            reduce using rule 6 (statement -> do_loop .)
    INTEGER         reduce using rule 6 (statement -> do_loop .)
    REAL            reduce using rule 6 (statement -> do_loop .)
    CHARACTER       reduce using rule 6 (statement -> do_loop .)
    LOGICAL         reduce using rule 6 (statement -> do_loop .)
    IDENTIFIER      reduce using rule 6 (statement -> do_loop .)
    $end            reduce using rule 6 (statement -> do_loop .)
    ENDIF           reduce using rule 6 (statement -> do_loop .)
    ELSE            reduce using rule 6 (statement -> do_loop .)
    ENDDO           reduce using rule 6 (statement -> do_loop .)


state 7

    (7) statement -> io_statement .

    CONTINUE        reduce using rule 7 (statement -> io_statement .)
    EXIT            reduce using rule 7 (statement -> io_statement .)
    DIMENSION       reduce using rule 7 (statement -> io_statement .)
    IF              reduce using rule 7 (statement -> io_statement .)
    DO              reduce using rule 7 (statement -> io_statement .)
    PRINT           reduce using rule 7 (statement -> io_statement .)
    READ            reduce using rule 7 (statement -> io_statement .)
    INTEGER         reduce using rule 7 (statement -> io_statement .)
    REAL            reduce using rule 7 (statement -> io_statement .)
    CHARACTER       reduce using rule 7 (statement -> io_statement .)
    LOGICAL         reduce using rule 7 (statement -> io_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> io_statement .)
    $end            reduce using rule 7 (statement -> io_statement .)
    ENDIF           reduce using rule 7 (statement -> io_statement .)
    ELSE            reduce using rule 7 (statement -> io_statement .)
    ENDDO           reduce using rule 7 (statement -> io_statement .)


state 8

    (8) statement -> CONTINUE .

    CONTINUE        reduce using rule 8 (statement -> CONTINUE .)
    EXIT            reduce using rule 8 (statement -> CONTINUE .)
    DIMENSION       reduce using rule 8 (statement -> CONTINUE .)
    IF              reduce using rule 8 (statement -> CONTINUE .)
    DO              reduce using rule 8 (statement -> CONTINUE .)
    PRINT           reduce using rule 8 (statement -> CONTINUE .)
    READ            reduce using rule 8 (statement -> CONTINUE .)
    INTEGER         reduce using rule 8 (statement -> CONTINUE .)
    REAL            reduce using rule 8 (statement -> CONTINUE .)
    CHARACTER       reduce using rule 8 (statement -> CONTINUE .)
    LOGICAL         reduce using rule 8 (statement -> CONTINUE .)
    IDENTIFIER      reduce using rule 8 (statement -> CONTINUE .)
    $end            reduce using rule 8 (statement -> CONTINUE .)
    ENDIF           reduce using rule 8 (statement -> CONTINUE .)
    ELSE            reduce using rule 8 (statement -> CONTINUE .)
    ENDDO           reduce using rule 8 (statement -> CONTINUE .)


state 9

    (9) statement -> EXIT .

    CONTINUE        reduce using rule 9 (statement -> EXIT .)
    EXIT            reduce using rule 9 (statement -> EXIT .)
    DIMENSION       reduce using rule 9 (statement -> EXIT .)
    IF              reduce using rule 9 (statement -> EXIT .)
    DO              reduce using rule 9 (statement -> EXIT .)
    PRINT           reduce using rule 9 (statement -> EXIT .)
    READ            reduce using rule 9 (statement -> EXIT .)
    INTEGER         reduce using rule 9 (statement -> EXIT .)
    REAL            reduce using rule 9 (statement -> EXIT .)
    CHARACTER       reduce using rule 9 (statement -> EXIT .)
    LOGICAL         reduce using rule 9 (statement -> EXIT .)
    IDENTIFIER      reduce using rule 9 (statement -> EXIT .)
    $end            reduce using rule 9 (statement -> EXIT .)
    ENDIF           reduce using rule 9 (statement -> EXIT .)
    ELSE            reduce using rule 9 (statement -> EXIT .)
    ENDDO           reduce using rule 9 (statement -> EXIT .)


state 10

    (10) declaration -> type . DCOLON IDENTIFIER
    (11) declaration -> type . DCOLON IDENTIFIER LPAREN array_dims RPAREN

    DCOLON          shift and go to state 24


state 11

    (22) target -> IDENTIFIER .
    (24) array_ref -> IDENTIFIER . LPAREN expression RPAREN
    (25) array_ref -> IDENTIFIER . LPAREN expression_list RPAREN

    EQUALS          reduce using rule 22 (target -> IDENTIFIER .)
    LPAREN          shift and go to state 25


state 12

    (12) declaration -> DIMENSION . DCOLON IDENTIFIER LPAREN array_dims RPAREN

    DCOLON          shift and go to state 26


state 13

    (21) assignment -> target . EQUALS expression

    EQUALS          shift and go to state 27


state 14

    (26) if_statement -> IF . LPAREN condition RPAREN THEN statement_list ENDIF
    (27) if_statement -> IF . LPAREN condition RPAREN THEN statement_list ELSE statement_list ENDIF

    LPAREN          shift and go to state 28


state 15

    (28) do_loop -> DO . IDENTIFIER EQUALS expression COMMA expression statement_list ENDDO

    IDENTIFIER      shift and go to state 29


state 16

    (31) io_statement -> PRINT . TIMES COMMA print_list

    TIMES           shift and go to state 30


state 17

    (32) io_statement -> READ . TIMES COMMA read_list

    TIMES           shift and go to state 31


state 18

    (13) type -> INTEGER .

    DCOLON          reduce using rule 13 (type -> INTEGER .)


state 19

    (14) type -> REAL .

    DCOLON          reduce using rule 14 (type -> REAL .)


state 20

    (15) type -> CHARACTER .

    DCOLON          reduce using rule 15 (type -> CHARACTER .)


state 21

    (16) type -> LOGICAL .

    DCOLON          reduce using rule 16 (type -> LOGICAL .)


state 22

    (23) target -> array_ref .

    EQUALS          reduce using rule 23 (target -> array_ref .)


state 23

    (2) program -> program statement .

    CONTINUE        reduce using rule 2 (program -> program statement .)
    EXIT            reduce using rule 2 (program -> program statement .)
    DIMENSION       reduce using rule 2 (program -> program statement .)
    IF              reduce using rule 2 (program -> program statement .)
    DO              reduce using rule 2 (program -> program statement .)
    PRINT           reduce using rule 2 (program -> program statement .)
    READ            reduce using rule 2 (program -> program statement .)
    INTEGER         reduce using rule 2 (program -> program statement .)
    REAL            reduce using rule 2 (program -> program statement .)
    CHARACTER       reduce using rule 2 (program -> program statement .)
    LOGICAL         reduce using rule 2 (program -> program statement .)
    IDENTIFIER      reduce using rule 2 (program -> program statement .)
    $end            reduce using rule 2 (program -> program statement .)


state 24

    (10) declaration -> type DCOLON . IDENTIFIER
    (11) declaration -> type DCOLON . IDENTIFIER LPAREN array_dims RPAREN

    IDENTIFIER      shift and go to state 32


state 25

    (24) array_ref -> IDENTIFIER LPAREN . expression RPAREN
    (25) array_ref -> IDENTIFIER LPAREN . expression_list RPAREN
    (39) expression -> . term
    (40) expression -> . expression PLUS term
    (41) expression -> . expression MINUS term
    (51) expression_list -> . expression
    (52) expression_list -> . expression_list COMMA expression
    (42) term -> . factor
    (43) term -> . term TIMES factor
    (44) term -> . term DIVIDE factor
    (45) factor -> . primary
    (46) factor -> . factor POWER primary
    (47) primary -> . NUMBER
    (48) primary -> . IDENTIFIER
    (49) primary -> . LPAREN expression RPAREN
    (50) primary -> . array_ref
    (24) array_ref -> . IDENTIFIER LPAREN expression RPAREN
    (25) array_ref -> . IDENTIFIER LPAREN expression_list RPAREN

    NUMBER          shift and go to state 40
    IDENTIFIER      shift and go to state 33
    LPAREN          shift and go to state 34

    expression                     shift and go to state 35
    expression_list                shift and go to state 36
    term                           shift and go to state 37
    factor                         shift and go to state 38
    primary                        shift and go to state 39
    array_ref                      shift and go to state 41

state 26

    (12) declaration -> DIMENSION DCOLON . IDENTIFIER LPAREN array_dims RPAREN

    IDENTIFIER      shift and go to state 42


state 27

    (21) assignment -> target EQUALS . expression
    (39) expression -> . term
    (40) expression -> . expression PLUS term
    (41) expression -> . expression MINUS term
    (42) term -> . factor
    (43) term -> . term TIMES factor
    (44) term -> . term DIVIDE factor
    (45) factor -> . primary
    (46) factor -> . factor POWER primary
    (47) primary -> . NUMBER
    (48) primary -> . IDENTIFIER
    (49) primary -> . LPAREN expression RPAREN
    (50) primary -> . array_ref
    (24) array_ref -> . IDENTIFIER LPAREN expression RPAREN
    (25) array_ref -> . IDENTIFIER LPAREN expression_list RPAREN

    NUMBER          shift and go to state 40
    IDENTIFIER      shift and go to state 33
    LPAREN          shift and go to state 34

    expression                     shift and go to state 43
    term                           shift and go to state 37
    factor                         shift and go to state 38
    primary                        shift and go to state 39
    array_ref                      shift and go to state 41

state 28

    (26) if_statement -> IF LPAREN . condition RPAREN THEN statement_list ENDIF
    (27) if_statement -> IF LPAREN . condition RPAREN THEN statement_list ELSE statement_list ENDIF
    (53) condition -> . expression GT expression
    (54) condition -> . expression LT expression
    (55) condition -> . expression GE expression
    (56) condition -> . expression LE expression
    (57) condition -> . expression EQ expression
    (58) condition -> . expression NE expression
    (59) condition -> . condition AND condition
    (60) condition -> . condition OR condition
    (61) condition -> . NOT condition
    (62) condition -> . LPAREN condition RPAREN
    (63) condition -> . TRUE
    (64) condition -> . FALSE
    (39) expression -> . term
    (40) expression -> . expression PLUS term
    (41) expression -> . expression MINUS term
    (42) term -> . factor
    (43) term -> . term TIMES factor
    (44) term -> . term DIVIDE factor
    (45) factor -> . primary
    (46) factor -> . factor POWER primary
    (47) primary -> . NUMBER
    (48) primary -> . IDENTIFIER
    (49) primary -> . LPAREN expression RPAREN
    (50) primary -> . array_ref
    (24) array_ref -> . IDENTIFIER LPAREN expression RPAREN
    (25) array_ref -> . IDENTIFIER LPAREN expression_list RPAREN

    NOT             shift and go to state 47
    LPAREN          shift and go to state 44
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    NUMBER          shift and go to state 40
    IDENTIFIER      shift and go to state 33

    condition                      shift and go to state 45
    expression                     shift and go to state 46
    term                           shift and go to state 37
    factor                         shift and go to state 38
    primary                        shift and go to state 39
    array_ref                      shift and go to state 41

state 29

    (28) do_loop -> DO IDENTIFIER . EQUALS expression COMMA expression statement_list ENDDO

    EQUALS          shift and go to state 50


state 30

    (31) io_statement -> PRINT TIMES . COMMA print_list

    COMMA           shift and go to state 51


state 31

    (32) io_statement -> READ TIMES . COMMA read_list

    COMMA           shift and go to state 52


state 32

    (10) declaration -> type DCOLON IDENTIFIER .
    (11) declaration -> type DCOLON IDENTIFIER . LPAREN array_dims RPAREN
